Pagina de what if terminada y semántica revisada

--- a/500.html
+++ b/500.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Error 500</title>
+    <meta name="description" content="Error 500">
     <!--Estilos-->
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/common.css">
@@ -16,9 +17,8 @@
     <meta property="og:image" content="https://seeklogo.com/images/D/deadpool-logo-94CDEB7021-seeklogo.com.png">
 </head>
 
-
 <body class="main-bg">
-    <section>
+    <main>
         <!--Mensaje de Error-->
         <div class="error500">
             <div class="error-message">Error 500: Internal server error</div>
@@ -33,16 +33,14 @@
         <!--Imagen de fondo-->
             <img src="assets/404 y 500/404mini.png" alt="Deadpoop te da Error 404" class="background-image">
         </div>
-    </section>
-
-
+    </main>
 
     <!--FOOTER-->
     <footer  class="footer">
-            <a href="http://facebook.com/marvel" target="_blank" rel="noopener noreferrer"><img src="assets/iconos rrss/facebook.png" class="img" alt="Acceso a Facebook"></a>
-            <a href="http://instagram.com/marvel" target="_blank" rel="noopener noreferrer"> <img src="assets/iconos rrss/instagram.png" class="img" alt="Acceso a Instagram" ></a>
-            <a href="https://www.tiktok.com/@marvel" target="_blank" rel="noopener noreferrer"><img src="assets/iconos rrss/tiktok.png" class="img" alt="Acceso a TikTok"></a>
-            <a href="http://youtube.com/marvel" target="_blank" rel="noopener noreferrer"><img src="assets/iconos rrss/youtube.png" class="img" alt="Acceso a Youtube"></a>
+        <a href="http://facebook.com/marvel" target="_blank" rel="noopener noreferrer"><img src="assets/iconos rrss/facebook.png" class="img" alt="Visita nuestro Facebook"></a>
+        <a href="http://instagram.com/marvel" target="_blank" rel="noopener noreferrer"> <img src="assets/iconos rrss/instagram.png" class="img" alt="Visita nuestro Instagram" ></a>
+        <a href="https://www.tiktok.com/@marvel" target="_blank" rel="noopener noreferrer"><img src="assets/iconos rrss/tiktok.png" class="img" alt="Visita nuestro TikTok"></a>
+        <a href="http://youtube.com/marvel" target="_blank" rel="noopener noreferrer"><img src="assets/iconos rrss/youtube.png" class="img" alt="Visita nuestro Youtube"></a>
     </footer>
 </body>
 </html>
