--- a/whatif.html
+++ b/whatif.html
@@ -4,41 +4,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>What if...?</title>
+    <meta name="description" content="What if...?">
     <!--Estilos-->
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/common.css">
     <link rel="stylesheet" href="styles/components.css">
     <link rel="stylesheet" href="styles/header.css">
-    <link rel="stylesheet" href="styles/footer.css">
     <link rel="stylesheet" href="styles/banner.css">
-    <link rel="stylesheet" href="styles/spinners.css">
-    <link rel="stylesheet" href="styles/form.css">
+    <link rel="stylesheet" href="styles/animacion-whatif.css">
+    <link rel="stylesheet" href="styles/footer.css">
     <!--Open Graphs-->
     <meta property="og:title" content="Avengers MCU">
     <meta property="og:description" content="Porfolio de los Avengers del universo cinematográfico de Marvel">
     <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0b/Symbol_from_Marvel%27s_The_Avengers_logo.svg/191px-Symbol_from_Marvel%27s_The_Avengers_logo.svg.png">
 </head>
 
-
 <body class="main-bg">
-    <main>
-        <section class="general-body">
-        <div class="contenido-alternativo">
-            <h1 id="avengers">What if...?</h1>
-            <p class="content">Sabemos que esta página ha salido muy bien, pero... ¿qué habría pasado si nos hubiera saltado un error 404 o un error 500?</p>
-            <p>¡Pulsa en las siguientes imágenes para descubrirlo!</p>
-        </div>
-        </section>
-    </main>
+    <!--HEADER/NAVBAR-->
+    <header class="header">
+        <img class="image" src="assets/headerimg.png" alt="Infinite Saga brand"> 
+        <nav class="nav">
+            <ul class="list">
+                <li class="item">
+                    <a class="btn " href="index.html">Iniciativa Vengadores</a>
+                </li>
+                <li class="item">
+                    <a class="btn" href="peliculas.html">Saga</a>
+                </li>
+                <li class="item">
+                    <a class="btn hidden" href="whatif.html">What if...?</a>
+                </li>
+                <li class="item">
+                    <a class="btn hidden" href="#formulario">Recibir más info</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
-
+<!--CONTENIDO PRINCIPAL-->
+        <main class="general-body">
+            <div class="contenido-alternativo">
+                <h1 id="avengers">What if...?</h1>
+                <p class="content">Sabemos que esta web ha salido muy bien, pero... ¿qué habría pasado si nos hubiera saltado un error 404 o un error 500?</p>
+                <p>¡Pulsa en las siguientes imágenes para descubrirlo!</p>
+            </div>
+            <div class="clash">
+                <a href="404.html">
+                    <img src="assets/404 y 500/thanos-clash.png" alt="Thanos atacando a los Avengers">
+                </a>
+                <a href="500.html">
+                    <img src="assets/404 y 500/avengers-clash.png" alt="Los Avengers atacando a Thanos">
+                </a>
+            </div>
+        </main>
 
     <!--FOOTER-->
     <footer  class="footer">
-            <a href="http://facebook.com/marvel" target="_blank" rel="noopener noreferrer"><img src="assets/iconos rrss/facebook.png" class="img" alt="Acceso a Facebook"></a>
-            <a href="http://instagram.com/marvel" target="_blank" rel="noopener noreferrer"> <img src="assets/iconos rrss/instagram.png" class="img" alt="Acceso a Instagram" ></a>
-            <a href="https://www.tiktok.com/@marvel" target="_blank" rel="noopener noreferrer"><img src="assets/iconos rrss/tiktok.png" class="img" alt="Acceso a TikTok"></a>
-            <a href="http://youtube.com/marvel" target="_blank" rel="noopener noreferrer"><img src="assets/iconos rrss/youtube.png" class="img" alt="Acceso a Youtube"></a>
+            <a href="http://facebook.com/marvel" target="_blank" rel="noopener noreferrer"><img src="assets/iconos rrss/facebook.png" class="img" alt="Visita nuestro Facebook"></a>
+            <a href="http://instagram.com/marvel" target="_blank" rel="noopener noreferrer"> <img src="assets/iconos rrss/instagram.png" class="img" alt="Visita nuestro Instagram" ></a>
+            <a href="https://www.tiktok.com/@marvel" target="_blank" rel="noopener noreferrer"><img src="assets/iconos rrss/tiktok.png" class="img" alt="Visita nuestro TikTok"></a>
+            <a href="http://youtube.com/marvel" target="_blank" rel="noopener noreferrer"><img src="assets/iconos rrss/youtube.png" class="img" alt="Visita nuestro Youtube"></a>
     </footer>
 </body>
 </html>
