--- a/404.html
+++ b/404.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Error 404</title>
+    <meta name="description" content="Error 404">
     <!--Estilos-->
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/common.css">
@@ -16,7 +17,7 @@
 
 
 <body class="main-bg">
-    <div class="card404">
+    <main class="card404">
         <div class="error-message">Error 404: Avengers not found</div>
         <div>Mejor ve a ver la nueva peli de Dead Pool!</div>
         <div class="button-deadpool-web">
@@ -24,10 +25,10 @@
             <button>Venga vamos!</button>
             </a>
         </div>
-        <img src="assets/404 y 500/DeadpoollovesignPNGImage.png" alt="Deadpoop te da Error 404">
+        <img src="assets/404 y 500/DeadpoollovesignPNGImage.png" alt="Deadpoop haciendo un corazón con las manos">
         <div class="button-deadpool-troll">
         <a href="index.html" target="_blank"><button>O pulsa aquí para volver con los Avengers :(</button></a>
     </div>
-    </div>
+</main>
 </body>
 </html>
