fuente cambiada, imagenes de banner cambiadas, pequeños ajustes adicionales

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Portfolio de los Avengers</title>
     <meta name="description" content="Portfolio de los Avengers del universo cinematográfico de Marvel">
     <!--Estilos-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/common.css">
     <link rel="stylesheet" href="styles/components.css">
@@ -24,7 +27,7 @@
 
     <!--HEADER/NAVBAR-->
     <header class="header">
-        <img class="image" src="assets/headerimg.png" alt="Infinite Saga brand"> 
+        <img class="image" src="assets/headerimg.png" alt="Logo de los Avengers"> 
         <nav class="nav">
             <ul class="list">
                 <li class="item">
@@ -126,10 +129,12 @@
                             <textarea id="moreinfo" name="moreinfo" placeholder="Qué más quieres saber" rows="5" maxlength="180"></textarea> <!-- No requerido -->
                         </div>
                         <!-- Newsletter checkbox -->
-                        <div class="form__element">
+                        <fieldset class="form__element">
+                        <div>
                             <input type="checkbox" id="newsletter" name="newsletter">
-                            <label class="pointer" for="newsletter">Recibir newsletter</label>
+                            <label class="pointer" for="newsletter">Quiero recibir la newsletter</label>
                         </div>
+                        </fieldset>
                         <!-- Botones enviar/reset -->
                         <div class="form__element">
                             <button class="btn" type="submit">Enviar</button>
