--- a/peliculas.html
+++ b/peliculas.html
@@ -6,6 +6,9 @@
     <title>Películas</title>
     <meta name="description" content="Películas de los Avengers">
     <!--Estilos-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/common.css">
     <link rel="stylesheet" href="styles/components.css">
@@ -24,7 +27,7 @@
 
     <!--HEADER/NAVBAR-->
     <header class="header">
-        <img class="image" src="assets/headerimg.png" alt="Infinite Saga brand"> 
+        <img class="image" src="assets/headerimg.png" alt="Logo de los Avengers"> 
         <nav class="nav">
             <ul class="list">
                 <li class="item">
