--- a/whatif.html
+++ b/whatif.html
@@ -6,6 +6,9 @@
     <title>What if...?</title>
     <meta name="description" content="What if...?">
     <!--Estilos-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/common.css">
     <link rel="stylesheet" href="styles/components.css">
@@ -14,15 +17,15 @@
     <link rel="stylesheet" href="styles/animacion-whatif.css">
     <link rel="stylesheet" href="styles/footer.css">
     <!--Open Graphs-->
-    <meta property="og:title" content="Avengers MCU">
-    <meta property="og:description" content="Porfolio de los Avengers del universo cinematográfico de Marvel">
+    <meta property="og:title" content="What if...?">
+    <meta property="og:description" content="Descripción del universo alternativo de nuestra web en el que las cosas no salen bien">
     <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0b/Symbol_from_Marvel%27s_The_Avengers_logo.svg/191px-Symbol_from_Marvel%27s_The_Avengers_logo.svg.png">
 </head>
 
 <body class="main-bg">
     <!--HEADER/NAVBAR-->
     <header class="header">
-        <img class="image" src="assets/headerimg.png" alt="Infinite Saga brand"> 
+        <img class="image" src="assets/headerimg.png" alt="Logo de los Avengers"> 
         <nav class="nav">
             <ul class="list">
                 <li class="item">
@@ -33,9 +36,6 @@
                 </li>
                 <li class="item">
                     <a class="btn hidden" href="whatif.html">What if...?</a>
-                </li>
-                <li class="item">
-                    <a class="btn hidden" href="#formulario">Recibir más info</a>
                 </li>
             </ul>
         </nav>
