--- a/404.html
+++ b/404.html
@@ -6,12 +6,15 @@
     <title>Error 404</title>
     <meta name="description" content="Error 404">
     <!--Estilos-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/common.css">
     <link rel="stylesheet" href="styles/card404_500.css">
     <!--Open Graphs-->
     <meta property="og:title" content="Error 404">
-    <meta property="og:description" content="Avengers not Found">
+    <meta property="og:description" content="Error 404: Avengers not Found">
     <meta property="og:image" content="https://seeklogo.com/images/D/deadpool-logo-94CDEB7021-seeklogo.com.png">
 </head>
 
