--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <a class="btn " href="index.html">Iniciativa Vengadores</a>
                 </li>
                 <li class="item">
-                    <a class="btn" href="peliculas.html">Saga</a>
+                    <a class="btn" href="peliculas.html">Películas</a>
                 </li>
                 <li class="item">
                     <a class="btn hidden" href="whatif.html">What if...?</a>
@@ -50,7 +50,7 @@
     <section class="banner">
         <div class="image"></div>
         <div class="content">
-            <h2>Los Vengadores y la Saga del Infinito</h2>
+            <h2>Iniciativa Vengadores</h2>
             <p class="italic">La apasionante búsqueda de las piedras del infinito y como estas lo cambiaron todo</p>
         </div>   
     </section>
@@ -60,7 +60,7 @@
     <main>
     <section class="general-body">
         <div class="contenido-alternativo">
-            <h1 id="avengers">Los Vengadores</h1>
+            <h1 id="avengers">Sobre los Vengadores</h1>
             <p class="content">Los Vengadores (Avengers) en el MCU (Marvel Cinematic Universe) son un equipo de superhéroes formado para proteger la Tierra de amenazas globales. Los miembros originales incluyen Iron Man, Thor, Hulk, Capitán América, Black Widow y Hawkeye. A lo largo de las películas, el equipo crece e incluye héroes como Spider-Man, Black Panther, Scarlet Witch y Doctor Strange, entre otros. Juntos enfrentan enemigos poderosos como Loki, Ultron y Thanos.</p>
         </div>
     <!--Barritas de habilidades-->
