--- a/whatif.html
+++ b/whatif.html
@@ -32,7 +32,7 @@
                     <a class="btn " href="index.html">Iniciativa Vengadores</a>
                 </li>
                 <li class="item">
-                    <a class="btn" href="peliculas.html">Saga</a>
+                    <a class="btn" href="peliculas.html">Películas</a>
                 </li>
                 <li class="item">
                     <a class="btn hidden" href="whatif.html">What if...?</a>
