pequeños fallos corregidos espero que esta sea la última

--- a/404.html
+++ b/404.html
@@ -24,7 +24,7 @@
         <div class="error-message">Error 404: Avengers not found</div>
         <div>Mejor ve a ver la nueva peli de Dead Pool!</div>
         <div class="button-deadpool-web">
-            <a href="https://www.disney.es/peliculas/deadpool-y-lobezno" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.disney.es/peliculas/deadpool-y-lobezno" rel="noopener noreferrer">
             <button>Venga vamos!</button>
             </a>
         </div>
