nuevos ajustes hechos. Terminadísimo

--- a/404.html
+++ b/404.html
@@ -24,13 +24,13 @@
         <div class="error-message">Error 404: Avengers not found</div>
         <div>Mejor ve a ver la nueva peli de Dead Pool!</div>
         <div class="button-deadpool-web">
-            <a href="https://www.disney.es/peliculas/deadpool-y-lobezno" rel="noopener noreferrer">
+            <a href="https://www.disney.es/peliculas/deadpool-y-lobezno" target="_blank" rel="noopener noreferrer">
             <button>Venga vamos!</button>
             </a>
         </div>
         <img src="assets/404 y 500/DeadpoollovesignPNGImage.png" alt="Deadpoop haciendo un corazón con las manos">
         <div class="button-deadpool-troll">
-        <a href="index.html" target="_blank"><button>O pulsa aquí para volver con los Avengers :(</button></a>
+        <a href="index.html"><button>O pulsa aquí para volver con los Avengers :(</button></a>
     </div>
 </main>
 </body>
