--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <nav class="nav">
             <ul class="list">
                 <li class="item">
-                    <a class="btn " href="index.html">Iniciativa Vengadores</a>
+                    <a class="btn " href="index.html">Vengadores</a>
                 </li>
                 <li class="item">
                     <a class="btn" href="peliculas.html">Películas</a>
