--- a/peliculas.html
+++ b/peliculas.html
@@ -31,13 +31,16 @@
         <nav class="nav">
             <ul class="list">
                 <li class="item">
-                    <a class="btn " href="index.html">Iniciativa Vengadores</a>
+                    <a class="btn " href="index.html">Vengadores</a>
                 </li>
                 <li class="item">
                     <a class="btn" href="peliculas.html">Películas</a>
                 </li>
                 <li class="item">
                     <a class="btn hidden" href="whatif.html">What if...?</a>
+                </li>
+                <li class="item">
+                    <a class="btn hidden" href="index.html#formulario">Recibir más info</a>
                 </li>
             </ul>
         </nav>
