--- a/index.html
+++ b/index.html
@@ -67,17 +67,18 @@
         <div class="general-contenido">
             <h2>Habilidades de los Avengers</h2>
             <p>Hay que destacar que los Vengadores tienen muchas cualidades a la hora de llevar a cabo sus misiones, pero estas son las principales:</p>
-            
-            <div class="barritas">Salvar el mundo</div>
-            <div class="barritas second">Destruir a su paso</div>
-            <div class="barritas third">Vestir bien</div>
-            <div class="barritas fourth">Chistes malos</div>
-            <div class="barritas fifth">Comer Kebabs</div>
+            <div class="barras-container">
+                <div class="barras first"><span>Salvar el mundo</span></div>
+                <div class="barras second"><span>Destruir todo</span></div>
+                <div class="barras third"><span>Vestir bien</span></div>
+                <div class="barras fourth"><span>Chistes malos</span></div>
+                <div class="barras fifth"><span>Comer Kebabs</span></div>
+            </div>
         </div>
     </section>
 
 <!-- FORMULARIO -->
-        <section id="formulario">
+        <section class general-body id="formulario">
             <div class="form__card">
                 <form method="post" aria-labelledby="formulario">
                     <fieldset class="form__element">
