ultimísima versión con pequeños ajustes finales

--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/common.css">
-    <link rel="stylesheet" href="styles/card404_500.css">
+    <link rel="stylesheet" href="styles/card404.css">
     <!--Open Graphs-->
     <meta property="og:title" content="Error 404">
     <meta property="og:description" content="Error 404: Avengers not Found">
