--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
 <!--MAIN-->
     <main>
     <section class="general-body">
-        <div class="contenido-alternativo">
+        <div>
             <h1 id="avengers">Sobre los Vengadores</h1>
-            <p class="content">Los Vengadores (Avengers) en el MCU (Marvel Cinematic Universe) son un equipo de superhéroes formado para proteger la Tierra de amenazas globales. Los miembros originales incluyen Iron Man, Thor, Hulk, Capitán América, Black Widow y Hawkeye. A lo largo de las películas, el equipo crece e incluye héroes como Spider-Man, Black Panther, Scarlet Witch y Doctor Strange, entre otros. Juntos enfrentan enemigos poderosos como Loki, Ultron y Thanos.</p>
+            <p>Los Vengadores (Avengers) en el MCU (Marvel Cinematic Universe) son un equipo de superhéroes formado para proteger la Tierra de amenazas globales. Los miembros originales incluyen Iron Man, Thor, Hulk, Capitán América, Black Widow y Hawkeye. A lo largo de las películas, el equipo crece e incluye héroes como Spider-Man, Black Panther, Scarlet Witch y Doctor Strange, entre otros. Juntos enfrentan enemigos poderosos como Loki, Ultron y Thanos.</p>
         </div>
     <!--Barritas de habilidades-->
-        <div class="general-contenido">
+        <div>
             <h2>Habilidades de los Avengers</h2>
             <p>Hay que destacar que los Vengadores tienen muchas cualidades a la hora de llevar a cabo sus misiones, pero estas son las principales:</p>
             <div class="barras-container">
