--- a/whatif.html
+++ b/whatif.html
@@ -46,9 +46,9 @@
 
 <!--CONTENIDO PRINCIPAL-->
         <main class="general-body">
-            <div class="contenido-alternativo">
+            <div>
                 <h1 id="avengers">What if...?</h1>
-                <p class="content">Sabemos que esta web ha salido muy bien, pero... ¿qué habría pasado si nos hubiera saltado un error 404 o un error 500?</p>
+                <p>Sabemos que esta web ha salido muy bien, pero... ¿qué habría pasado si nos hubiera saltado un error 404 o un error 500?</p>
                 <p>¡Pulsa en las siguientes imágenes para descubrirlo!</p>
             </div>
             <div class="clash">
